# ctc

./: CMakeLists.txt  README.md
data/models/: capsule.gltf  coin.gltf  playerball.gltf  sphere.gltf
src/: CMakeLists.txt
src/core/: core.hpp  debug_drawer.cpp  debug_drawer.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  line_renderer.cpp  line_renderer.hpp  logger.cpp  logger.hpp  physics.cpp  physics.hpp  resource_manager.cpp  resource_manager.hpp  time.cpp  time.hpp  window.cpp  window.hpp
src/ecs/components/: components.cpp  components.hpp
src/ecs/entities/: camera_entity.cpp  camera_entity.hpp  capsule_entity.cpp  capsule_entity.hpp  cube_entity.cpp  cube_entity.hpp  entities.hpp  entity.hpp  light_entity.cpp  light_entity.hpp  sphere_entity.cpp  sphere_entity.hpp
src/ecs/systems/: camera_system.cpp  camera_system.hpp  light_system.cpp  light_system.hpp  mesh_system.cpp  mesh_system.hpp  systems.hpp
src/resources/: default_shaders.cpp  default_shaders.hpp  model.cpp  model.hpp  render_object.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  texture.cpp  texture.hpp
tests/: CMakeLists.txt  enemy.cpp  enemy.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
